# mistral_ocr

./: .gitignore  README.md  mistral_ocr.py  pyproject.toml
